@@ -4,6 +4,12 @@
     [Fixed]
         * KeepAlive sends messages, not call/replies
         * Generate KeepAlive, so it has a version number
+    [Breaking]
+        * Constructor parameter 'max_unacked' renamed to 'max_inactive'
+    [Added]
+        * KeepAlive 'on_ping' event which should call the new 'pong' method
+        * KeepAlive 'mark_active' method which should be called
+          to signal other activity on the connection than keepalive messages
 
 10.3.11   2024-09-28
     [Fixed]
